@@ -1,3 +1,9 @@
+BOARD18 2.2.1 Release Notes
+
+Changes from 2.2.0 Release:
+Fixed some typos [due to Bug 58 fix] in log notes. 
+Fixed misrouting of game box load messages in board18BoxLoad.php
+
 BOARD18 2.2.0 Release Notes
 
 Changes from 2.1.3 Release:
